fix for chrome squashing single images

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1116,7 +1116,7 @@ hr {
   cursor: pointer;
   width: 100%;
   height: 100%;
-  max-height: 400px;
+  height: 400px;
   transition: border 100ms ease-in;
 }
 
